[package]
name = "map-prep"
version = "0.1.0"
edition = "2021"
authors = [
    "Steve Cooper"
]
documentation = "Prepares maps"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version="3.1", features = ["derive"] }
base64 = "0.20"
gmaps-static = { git="https://github.com/lmammino/gmaps-static" }
http = "1.1"
reqwest = { version="0.12", features=["json"] }
serde = { version="1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0"
tokio = { version= "1", features = ["rt", "rt-multi-thread", "macros" ]}